--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="main.js"></script>
   </head>
   <body></body>
 </html>
